--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "id": "f4070de0-7905-4f2a-afb9-2945046362dd",
    "metadata": {},
    "outputs": [],
@@ -40,6 +40,8 @@
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix, classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, StandardScaler, PolynomialFeatures\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
     "InteractiveShell.ast_node_interactivity = \"last_expr\" \n",
@@ -1767,10 +1769,335 @@
    "id": "27f61feb-e7af-43c1-8560-23aa2efb9617",
    "metadata": {},
    "source": [
-    "**Insigt:** No Strong Linear Multicollinearity: The most important insight from this heatmap is that there are no strong linear correlations between any pair of these numerical features. All correlation coefficients are quite low (all below 0.15 in absolute value).\n",
+    "**Insight:** No Strong Linear Multicollinearity The most important insight from this heatmap is that there are no strong linear correlations between any pair of these numerical features. All correlation coefficients are quite low (all below 0.15 in absolute value).\n",
     "This is generally a good sign for linear models (like Logistic Regression) because it suggests that multicollinearity is not a significant problem among the numerical features. Multicollinearity occurs when independent variables are highly correlated with each other, which can make it difficult for the model to estimate the individual impact of each feature.\n",
-    "Since the correlations are weak, each of these features likely provides unique information to the model, rather than redundant information."
+    "Since the correlations are weak, each of these features likely provides unique information to the model rather than redundant information."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f11ddfa-0006-49a7-a937-a1e0d6512d3b",
+   "metadata": {},
+   "source": [
+    "### 4.6 EDA Summary\n",
+    " - Age, education, occupation, and hours worked are key factors influencing income.\n",
+    " - Higher education and skilled occupations significantly increase the likelihood of earning >50K.\n",
+    " - Working longer hours is associated with higher income, particularly for >50K earners.\n",
+    " - Numerical features show low correlations, indicating they provide unique information for modeling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d68d5a7-76d3-4424-bdb1-ac5a52b33224",
+   "metadata": {},
+   "source": [
+    "## 5. Data Preprocessing and Feature Engineering\n",
+    " Preparing the data for modeling by encoding categorical variables, scaling numerical features, and creating new features.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69ad3660-86c3-4834-9085-44718bb82aad",
+   "metadata": {},
+   "source": [
+    "### 5.1 Feature Engineering\n",
+    " Create a new feature: `capital-net` (capital-gain minus capital-loss) to capture net financial gain.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "c12f967b-70f6-4869-98b9-7aea6e78cf34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "New feature 'capital-net' created:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>capital-net</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48837</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48838</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48839</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48840</th>\n",
+       "      <td>5455</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48841</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>48842 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       capital-gain  capital-loss  capital-net\n",
+       "0              2174             0         2174\n",
+       "1                 0             0            0\n",
+       "2                 0             0            0\n",
+       "3                 0             0            0\n",
+       "4                 0             0            0\n",
+       "...             ...           ...          ...\n",
+       "48837             0             0            0\n",
+       "48838             0             0            0\n",
+       "48839             0             0            0\n",
+       "48840          5455             0         5455\n",
+       "48841             0             0            0\n",
+       "\n",
+       "[48842 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# creating new features from the available features\n",
+    "income_data['capital-net'] = income_data['capital-gain'] - income_data['capital-loss']\n",
+    "print(\"\\nNew feature 'capital-net' created:\")\n",
+    "display(income_data[['capital-gain', 'capital-loss', 'capital-net']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "561af68d-8c6f-4939-b4aa-dae50546e9e0",
+   "metadata": {},
+   "source": [
+    "### 5.2 Encoding Categorical Variables\n",
+    "- Encode the target variable `income` using LabelEncoder (<=50K: 0, >50K: 1).\n",
+    " - Using one-hot encoding for other categorical variables to prepare them for modeling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "fe86fd22-66e1-4207-9760-518d0ec97ccb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoding target variable\n",
+    "label_encoder = LabelEncoder()\n",
+    "income_data['income'] = label_encoder.fit_transform(income_data['income'])\n",
+    "\n",
+    "# Defining features and target\n",
+    "features = income_data.drop(columns=['income'])\n",
+    "label = income_data['income']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "ad935203-001a-47a2-a161-408fd1d9dcde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Updating numerical and categorical columns after feature engineering\n",
+    "numerical_cols = ['age', 'education-num', 'capital-gain', 'capital-loss', 'hours-per-week', 'capital-net']\n",
+    "categorical_cols = ['workclass', 'education', 'marital-status', 'occupation', 'relationship', 'race', 'sex', 'native-country']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62e8cbc0-5aa9-47fc-924b-7e4f3b8fca06",
+   "metadata": {},
+   "source": [
+    "### 5.3 Feature Scaling and Encoding Pipeline\n",
+    "Creating a preprocessing pipeline to scale numerical features and one-hot encode categorical features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "e2712503-11af-4144-bede-74b1521d32c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining preprocessor\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', StandardScaler(), numerical_cols),\n",
+    "        ('cat', OneHotEncoder(drop='first', handle_unknown='ignore'), categorical_cols)\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48ee3f97-f693-4ff2-9c07-7ecbd8eb9b80",
+   "metadata": {},
+   "source": [
+    "### 5.4 Train-Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "10c8d22b-2741-47f9-882f-6cb140ccecbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training set shape: (39073, 14) (39073,)\n",
+      "Testing set shape: (9769, 14) (9769,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Splitting the data into training (80%) and testing (20%) sets.\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, label, test_size=0.2, random_state=42, stratify=y)\n",
+    "print(\"\\nTraining set shape:\", X_train.shape, y_train.shape)\n",
+    "print(\"Testing set shape:\", X_test.shape, y_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "596e4df6-aa9f-4ad0-87d5-7e620b139264",
+   "metadata": {},
+   "source": [
+    " ### 5.5 Applying Preprocessing\n",
+    " Fitting and transforming the data using the preprocessing pipeline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "cb877fdd-0ca8-4222-964b-579e2b479bae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fitting and transforming training data\n",
+    "X_train_preprocessed = preprocessor.fit_transform(X_train)\n",
+    "X_test_preprocessed = preprocessor.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7605183b-33af-4fcf-8687-66133f181e32",
+   "metadata": {},
+   "source": [
+    "### 5.6 Preprocessing Summary\n",
+    " - Created `capital-net` feature to capture net financial gain.\n",
+    " - Encoded `income` as binary (0: <=50K, 1: >50K).\n",
+    " - Applied one-hot encoding to categorical features and standardized numerical features.\n",
+    " - Split data into 80% training (26,048 rows) and 20% testing (6,513 rows).\n",
+    " - The preprocessed data includes additional columns from one-hot encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "795734b5-a7cc-4804-8658-4f542db8f8b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<39073x100 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 508125 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb088875-517e-420c-b1ff-e972f5561926",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
