Documentation of project

--- a/Abdulmuiz Ayodeji Sulaiman.ipynb
+++ b/Abdulmuiz Ayodeji Sulaiman.ipynb
@@ -2144,7 +2144,8 @@
    "id": "b7d4af8d-4aad-4085-bfcc-86f90ac1bd38",
    "metadata": {},
    "source": [
-    "#### 6.2.1 Logistic Regression"
+    "#### 6.2.1 Logistic Regression\n",
+    "Logistic Regression is tuned for regularization strength and solver.\n"
    ]
   },
   {
@@ -2213,7 +2214,8 @@
    "id": "b1e7c235-9392-4b37-a9c5-43921c226ed9",
    "metadata": {},
    "source": [
-    "#### 6.2.3 XGBoost"
+    "#### 6.2.3 Random Forest\n",
+    "Random Forest is tuned for number of trees and maximum depth."
    ]
   },
   {
@@ -2259,7 +2261,7 @@
     }
    ],
    "source": [
-    "# Xgboost model pipeline\n",
+    "# random forest model pipeline\n",
     "rf_pipeline = Pipeline([\n",
     "    ('preprocessor', preprocessor),\n",
     "    ('classifier', RandomForestClassifier(random_state=42))\n",
@@ -2283,7 +2285,8 @@
    "id": "42ee9e2b-7da0-422e-9985-d825f4b634df",
    "metadata": {},
    "source": [
-    "#### 6.2.3 XGBoost"
+    "#### 6.2.3 XGBoost\n",
+    "XGBoost is tuned for number of estimators, depth, and learning rate."
    ]
   },
   {
@@ -2353,7 +2356,8 @@
    "id": "e2d38b3a-2a13-40da-94b5-13f3a4620ce8",
    "metadata": {},
    "source": [
-    "#### 6.2.4 Support Vector Machine (SVM)"
+    "#### 6.2.4 Support Vector Machine (SVM)\n",
+    "SVM is tuned for regularization and kernel type, with probability enabled for ROC-AUC."
    ]
   },
   {
@@ -2422,7 +2426,9 @@
    "id": "356207b9-95a1-4dcd-a422-0b4dec090edf",
    "metadata": {},
    "source": [
-    "#### 6.2.5 K-Nearest Neighbors (KNN)"
+    "#### 6.2.5 K-Nearest Neighbors (KNN)\n",
+    "\n",
+    "KNN is tuned for number of neighbors and weighting strategy."
    ]
   },
   {
@@ -2654,21 +2660,21 @@
     }
    ],
    "source": [
-    "# Visualize model performance\n",
-    "# Create a bar plot for model comparison\n",
+    "# Visualizing model performance\n",
+    "# Creating a bar plot for model comparison\n",
     "fig, ax = plt.subplots(figsize=(12, 6))\n",
     "metrics = ['Accuracy', 'Precision', 'Recall', 'F1 Score', 'ROC-AUC']\n",
     "x = np.arange(len(metrics))\n",
     "width = 0.15\n",
     "\n",
-    "# Plot bars for each model\n",
+    "# Plotting bars for each model\n",
     "ax.bar(x - 2*width, results_df['Accuracy'], width, label='Logistic Regression', color='#1f77b4')\n",
     "ax.bar(x - width, results_df['Precision'], width, label='Random Forest', color='#ff7f0e')\n",
     "ax.bar(x, results_df['Recall'], width, label='XGBoost', color='#2ca02c')\n",
     "ax.bar(x + width, results_df['F1 Score'], width, label='SVM', color='#d62728')\n",
     "ax.bar(x + 2*width, results_df['ROC-AUC'], width, label='KNN', color='#9467bd')\n",
     "\n",
-    "# Customize plot\n",
+    "# Customizing plot\n",
     "ax.set_xlabel('Metrics')\n",
     "ax.set_ylabel('Score')\n",
     "ax.set_title('Model Performance Comparison')\n",
@@ -2677,6 +2683,14 @@
     "ax.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "284eda69-5b3a-4ce8-b29b-5b7a421f76df",
+   "metadata": {},
+   "source": [
+    "### 6.5 Feature Importance Analysis (XGBoost)"
    ]
   },
   {
@@ -2756,9 +2770,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ae92854-6704-4f9f-9d40-74949da20d45",
+   "metadata": {},
+   "source": [
+    "## 7. Model Development Process\n",
+    "During the model development process, I make use of training, tuning, and evaluating five machine learning models to predict income levels (>50K vs. ≤50K). I use a pipeline to streamline preprocessing and modeling, perform hyperparameter tuning to optimize performance, and evaluate models using multiple metrics to address the imbalanced dataset. Visualizations and feature importance analysis provide deeper insights into model performance and key predictors.\n",
+    "\n",
+    "### 7.1 Model Selection Rationale\n",
+    "I selected five diverse models to capture different aspects of the data:\n",
+    " - **Logistic Regression**: A linear model, interpretable and effective for binary classification.\n",
+    " - **Random Forest**: An ensemble method robust to overfitting and capable of handling non-linear relationships.\n",
+    " - **XGBoost**: A gradient boosting algorithm, powerful for imbalanced datasets due to its optimization techniques.\n",
+    " - **Support Vector Machine (SVM)**: Effective for finding optimal decision boundaries, especially with non-linear kernels.\n",
+    " - **K-Nearest Neighbors (KNN)**: A non-parametric model that captures local patterns, sensitive to feature scaling.\n",
+    "\n",
+    "### 7.2 Evaluation Metrics\n",
+    " Given the imbalanced dataset (~75% ≤50K, ~25% >50K), I prioritize:\n",
+    " - **ROC-AUC**: Measures overall classification performance, ideal for imbalanced data.\n",
+    " - **Recall**: Ensures identification of >50K earners (minority class).\n",
+    " - **Precision, F1 Score, Accuracy**: Provide a holistic view of performance.\n",
+    " Visualizations (confusion matrices, ROC curves) and a comparison bar plot enhance interpretation.\n",
+    "\n",
+    "### 7.3 Model Training and Hyperparameter Tuning\n",
+    "I use pipelines to integrate preprocessing (scaling, one-hot encoding, binary encoding) with modeling. Hyperparameter tuning is performed using GridSearchCV with 5-fold cross-validation, optimizing for ROC-AUC.\n",
+    "\n",
+    "### 7.4 Model Development Summary\n",
+    " - **Models Trained**: Five models were trained and optimized using GridSearchCV with 5-fold cross-validation.\n",
+    " - **Preprocessing**: Pipelines ensured consistent scaling, one-hot encoding, and binary encoding for `native-country`.\n",
+    " - **Evaluation**: Metrics (Accuracy, Precision, Recall, F1 Score, ROC-AUC) addressed the imbalanced dataset, with visualizations enhancing clarity.\n",
+    " - **Best Model**: XGBoost achieved the highest ROC-AUC (0.9315), with strong recall (0.6608) for >50K earners.\n",
+    " - **Feature Importance**: 'marital-status_Married-civ-spouse', 'education-num', and 'capital-gain' were key predictors, aligning with EDA.\n",
+    " - **Outcome**: The process was thorough, reproducible, and optimized for performance and interpretability."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aa03e4f-5b8b-43e4-bf79-9037291e14bc",
+   "id": "4e5547c5-627b-41f9-a481-4b54f470fb82",
    "metadata": {},
    "outputs": [],
    "source": []
